# fluffy-eureka

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml
examples/: band-config.yml  band-embed.html  band.html  cardioid-config.yml  cardioid-embed.html  cardioid.html  cardioid.yml  guitar-config.yml  guitar-embed.html  guitar.html  guitar.yml  index.html  move-the-line-config.yml  move-the-line-embed.html  move-the-line.html  move-the-line.yml  note-embed.html  note.html  note.yml  square-config.yml  square-embed.html  square.html  square.yml
src/: canvas.rs  lib.rs  model.rs  svg.rs  test.rs  text.rs
